# django-project-template

./: .babelrc  .coveragerc  .editorconfig  .eslintignore  .eslintrc  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .stylelintrc  LICENSE  Pipfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  quickstart.sh  requirements.txt  reset.sh  translate.sh  webpack.common.js  webpack.dev.js  webpack.prod.js
.circleci/: config.yml
.husky/: pre-commit  pre-push
ansible/: .ansible-lint  .yamllint  Readme.md  backup-db.yaml  backup-media.yaml  centos_pre_requirements.txt  deploy.sh  deploy.yaml  download-db.yaml  download-media.yaml  export-db.yaml  export-media.yaml  human-readable-output.yaml  import-db.yaml  import-media.yaml  install-services.yaml  inventory.yaml  requirements.yaml  restart-services.yaml  run-django-command.yaml  start-services.yaml  stop-services.yaml
ansible/group_vars/: all.yaml
ansible/img/: backup-diagram.drawio.xml
ansible/molecule/default/: molecule.yml  prepare.yml
ansible/molecule/deploy/: molecule.yml  prepare.yml  verify.yml
ansible/molecule/export/: molecule.yml  playbook.yml  prepare.yml  verify.yml
ansible/molecule/quickstart/: molecule.yml  playbook.yml  prepare.yml  requirements.yaml  verify.yml
ansible/molecule/utils/: set-locale.yaml
ansible/playbooks/: backup-db.yaml  backup-media.yaml  deploy.yaml  download-db.yaml  download-media.yaml  enable-services.yaml  export-db.yaml  export-direct-db.yaml  export-media.yaml  import-db.yaml  install-services.yaml  migrate-db.yaml  reset-db.yaml  run-django-command.yaml  service-logs.yaml  start-services.yaml  stop-services.yaml  validate-deployment.yaml
ansible/playbooks/utils/: assert-ansible-version.yaml
ansible/utils/: assert-ansible-version.yaml
api/: urls.py
assets/js/: app.js  index.js  status.js
assets/js/behaviors/: input-rut.js  input-time-picker.js  regions.js  related-field.js  status.js
assets/js/utils/: app.js  traversing.js
assets/js/vendors/: choices.js  select2.js  tempus-dominus.js
assets/scss/: main.scss
assets/scss/abstracts/: _+import.scss  _animations.scss  _functions.scss  _mixins.scss  _variables.scss
assets/scss/base/: _+import.scss  _base.scss  _root.scss  _transitions.scss  _type.scss
assets/scss/components/: _+import.scss  _alert.scss  _fixed-notification.scss  _forms.scss
assets/scss/layout/: _footer.scss  _main.scss  _navbar.scss  _sections.scss
assets/scss/layouts/: _+import.scss  _footer.scss  _navbar.scss  _page.scss
assets/scss/utilities/: _+import.scss  _colors.scss  _utilities.scss
assets/scss/vendors/: _+import.scss  _bootstrap.scss  _choices.scss  _select2.scss  _tempus-dominus-bootstrap-4.scss
base/: __init__.py  admin.py  apps.py  cron.py  enums.py  fields.py  forms.py  middleware.py  mixins.py  mockups.py  models.py  serializers.py  signals.py  tests.py  utils.py  view_utils.py  views.py
base/fields/: __init__.py  base.py  functions.py
base/filters/: pug.py
base/management/commands/: generatesecretkey.py  printdatabasedata.py  startapp.py
base/static/css/: bootstrap.scss  site.scss  variables.scss
base/static/js/: app.js  (+3 more)
base/templates/: base.pug  form.pug  status.pug
base/templatetags/: order_by_querystring.py  utils.py
fabfile/: __init__.py  config.py  db.py  deb_handler.py  gunicorn.py  memcache.py  nginx.py  project.py  service.py  utils.py
fabfile/templates/: gunicorn.conf  gunicorn_systemd.service  nginx_site.conf
install/: postgres.sh
messaging/: email_manager.py
parameters/: __init__.py  admin.py  apps.py  enums.py  forms.py  managers.py  models.py  tests.py  urls.py  validators.py  views.py
parameters/migrations/: 0001_initial.py  0002_auto_20210202_1854.py
project/: circleci_settings.py  context_processors.py  forms.py  local_settings.py.default  managers.py  models.py  routers.py  serializers.py  settings.py  storage_backends.py  urls.py  utils.py  views.py
project/app_template/: __init__.py-tpl  admin.py-tpl  apps.py-tpl  forms.py-tpl  managers.py  models.py-tpl  urls.py-tpl  views.py-tpl
project/templates/: base.pug  form.pug  index.pug
regions/: apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
regions/fixtures/: initial_data.json
regions/migrations/: 0001_initial.py  0002_auto_20180111_1623.py  0003_auto_20180111_1748.py  0004_auto_20190307_1851.py
users/: admin.py  apps.py  backends.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_initial_admin_user.py  0003_auto_20170919_1330.py  0003_auto_20170919_1335.py  0003_auto_20170919_1336.py  0004_auto_20170919_1336.py  0005_auto_20190307_1851.py
(+128 files in other folders)
