[tool.poetry]
name = "django-project-template"
version = "1.0.0"
description = "A project template for Django 2.2 in Python 3. This project tries to solve problems or features that commonly appear on Magnet projects. The idea is that you start your project using this code as the base."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~=2.2.24"
django-cron = "==0.5.1"
django-debug-toolbar = "~=3.2.2"
django-form-utils = "==1.0.3"
django-loginas = "==0.3.6"
django-recaptcha = "==2.0.4"
djangocms-admin-style = "==1.4.0"
inflection = "==0.3.1"
pypugjs = "==5.8.1"
pytz = "==2020.1"
python-memcached = "==1.59"
gunicorn = "==19.9.0"
djangorestframework = "==3.12.4"
djangorestframework-camel-case = "==1.1.2"
django-webpack-loader = "==0.7.0"
psycopg2-binary = "==2.8.5"
ipdb = "==0.13.3"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
