[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "A project template for Django 2.2 in Python 3. This project tries to solve problems or features that commonly appear on Magnet projects. The idea is that you start your project using this code as the base."
license = "MIT"
name = "django-project-template"
version = "1.0.0"

[tool.poetry.dependencies]
Django = "~=2.2.24"
django-cron = "==0.5.1"
django-debug-toolbar = "~=3.2.2"
django-form-utils = "==1.0.3"
django-loginas = "==0.3.6"
django-recaptcha = "==2.0.4"
django-webpack-loader = "==1.4.1"
djangocms-admin-style = "==1.4.0"
djangorestframework = "==3.12.4"
djangorestframework-camel-case = "==1.1.2"
gunicorn = "==19.9.0"
inflection = "==0.3.1"
ipdb = "==0.13.3"
psycopg2-binary = "==2.8.5"
pypugjs = "==5.9.9"
python = "^3.8"
python-memcached = "==1.59"
pytz = "==2020.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.4.0"
pre-commit = "^2.17.0"

[tool.isort]
ensure_newline_before_comments = true
extend_skip = ["migrations", "manage.py"]
filter_files = true
force_single_line = true
group_by_package = true
import_heading_django = "django"
import_heading_stdlib = "standard library"
import_heading_thirdparty = "others libraries"
known_django = "django"
lines_between_types = 1
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
addopts = ["-v", "--tb=native", "--junit-xml=test-results/pytest.xml"]
junit_family = "xunit2"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
required_plugins = "pytest-django"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
